# SPD-13

./: Power_Req_Summary.ods  README.md
arduino/: README.md
arduino/spd13_pololu_astar/: spd13_pololu_astar.ino
miscellaneous/: Robot_BoM.ods  motor_encoder_data_check.ods  motors_to_velocity.ods  ros2_run_remap.txt  temperature_1621247856.txt  temperature_1621247856.txt.ods
ros2_ws/: .gitignore
ros2_ws/src/astar_serial_arbiter/: package.xml  setup.cfg  setup.py
ros2_ws/src/astar_serial_arbiter/astar_serial_arbiter/: astar_serial_arbiter.py
ros2_ws/src/astar_serial_arbiter/yaml/: serial_parameters.yaml
ros2_ws/src/spd_13/: package.xml  setup.cfg  setup.py
ros2_ws/src/spd_13/launch/: basic.launch.py  node_diff_cmd_vel.launch.py  node_diff_odom.launch.py  node_laser_beep.launch.py  node_pid_vel_left.launch.py  node_pid_vel_right.launch.py  node_serial_arbiter.launch.py  robot_main.launch.py  serial_arbiter.launch.py  test_laser_beep.launch.py  test_pid_velocity.launch.py
ros2_ws/src/spd_13/param/: basic_launch.yaml  differential_cmd_vel.yaml  differential_odometry.yaml  pid_velocity.yaml  pid_velocity_left.yaml  pid_velocity_right.yaml  serial_arbiter.yaml
ros2_ws/src/spd_13/spd_13/: differential_cmd_vel.py  differential_odometry.py  laser_beep.py  pid_velocity.py  serial_arbiter.py  serial_arbiter_sim.py
ros2_ws/src/spd_13/yaml/: serial_arbiter.yaml
scripts/: curses_thing.py  misc_commands.txt  motor_encoder_csv_generator.py  pygame_thing.py  record_temperature.sh  teleop_keyboard.py  teleop_wasd.py
