<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>astar_serial_arbiter</name>
  <version>0.0.0</version>
  <description>ROS2 Node which interfaces directly with a Pololu AStar 32u4 Pi Hat running custom Arduino code.</description>
  <maintainer email="spectre@todo.todo">spectre</maintainer>
  <license>WTFPL</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>serial</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
